updated grapl_utils name

--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -7,7 +7,7 @@ members = [
     "./graph-merger",
     "./grapl",
     "./grapl-config",
-    "./grapl_utils",
+    "./grapl-utils",
     "./grapl-observe",
     "./metric-forwarder",
     "./node-identifier",
