--- a/docker-compose.zips.yml
+++ b/docker-compose.zips.yml
@@ -106,8 +106,8 @@ services:
   grapl-graphql-endpoint-zip:
     image: grapl/grapl-graphql-endpoint-zip:${TAG:-latest}
     build:
-      context: src/js/graphql_endpoint
-      dockerfile: Dockerfile
+      context: src
+      dockerfile: js/graphql_endpoint/Dockerfile
       target: graphql-endpoint-zip
     volumes:
       - ./src/js/grapl-cdk/zips:/grapl
