--- a/test/docker-compose.unit-tests-js.yml
+++ b/test/docker-compose.unit-tests-js.yml
@@ -7,8 +7,8 @@ services:
   grapl-engagement-view-test:
     image: grapl/grapl-engagement-view-build:${TAG:-latest}
     build: 
-      context: ${PWD}/src/js/engagement_view
-      dockerfile: Dockerfile
+      context: ${PWD}/src
+      dockerfile: js/engagement_view/Dockerfile
       target: engagement-view-deps
     command: sh -c 'CI=true yarn test'
 
@@ -16,8 +16,8 @@ services:
     image: grapl/grapl-cdk-test:${TAG:-latest}
     build:
       context: ${PWD}
-      target: grapl-cdk-test
       dockerfile: src/js/grapl-cdk/Dockerfile
+      target: grapl-cdk-test
     command: npm run test
 
   # grapl-graphql-endpoint:
