BUILD files for distributions
These are the three libraries we distribute.

Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/src/python/grapl_analyzerlib/grapl_analyzerlib/BUILD
+++ b/src/python/grapl_analyzerlib/grapl_analyzerlib/BUILD
@@ -7,8 +7,4 @@ python_library(
     ]
 )
 
-# TODO: Consider a plugin macro for this?
-resources(
-    name = "typehints",
-    sources = ["py.typed"]
-)
+py_typed()
