Add grapl_python_distribution macro
We always want to create a source distribution and binary wheels for
our Python libraries. Rather than having to type that out on every
`python_distribution`, we'll create a `grapl_python_distribution`
macro to do it for us.

Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/pants.toml
+++ b/pants.toml
@@ -12,6 +12,10 @@ pythonpath = [
   "%(buildroot)s/pants-plugins"
 ]
 
+build_file_prelude_globs = [
+  "pants-plugins/macros.py",
+]
+
 # Given how our code is currently structured, with package and test
 # code for every project in their own directory, I believe we have to
 # list each of those top-level containing directories here in order
