--- a/test/docker-compose.typecheck-tests.yml
+++ b/test/docker-compose.typecheck-tests.yml
@@ -34,7 +34,7 @@ services:
         pip install '.[typecheck]' &&
         mypy .
         "
-  
+
   typecheck-grapl-tests-common:
     image: grapl/grapl-tests-common-python-build:${TAG:-latest}
     build:
@@ -48,7 +48,7 @@ services:
         pip install '.[typecheck]' &&
         mypy .
         "
-  
+
   typecheck-engagement-creator:
     image: grapl/grapl-engagement-creator-test:${TAG:-latest}
     build:
@@ -75,8 +75,20 @@ services:
         mypy -p grapl_e2e_tests
         "
 
-  # typecheck-analyzer-deployer:
-  #   image: grapl/grapl-analyzer-deployer-test:${TAG:-latest}
+  typecheck-analyzer-deployer:
+    image: grapl/analyzer-deployer-test:${TAG:-latest}
+    command: /bin/sh -c '
+      source venv/bin/activate &&
+      cd analyzer_deployer &&
+      pip install mypy &&
+      mypy .
+      '
+    environment:
+      - "IS_LOCAL=True"
+      - "ANALYZERS_TABLE=local-grapl-analyzers_table"
+      - GRPC_ENABLE_FORK_SUPPORT=1
+      - "BUCKET_PREFIX=local-grapl"
+      - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
 
   typecheck-model-plugin-deployer:
     image: grapl/grapl-model-plugin-deployer-test:${TAG:-latest}
