--- a/test/docker-compose.unit-tests-python.yml
+++ b/test/docker-compose.unit-tests-python.yml
@@ -43,8 +43,17 @@ services:
         py.test -n auto -m "not integration_test"
         '
 
-  # grapl-analyzer-deployer:
-  #   image: grapl/grapl-analyzer-deployer-test:${TAG:-latest}
+  grapl-analyzer-deployer-test:
+    image: grapl/analyzer-deployer-test:${TAG:-latest}
+    build:
+      context: ${PWD}/src
+      dockerfile: ./python/Dockerfile
+      target: analyzer-deployer-test
+    command: /bin/sh -c '
+      source venv/bin/activate &&
+      cd analyzer_deployer &&
+      py.test -n auto -m "not integration_test"
+      '
 
   grapl-analyzer-executor-test:
     image: grapl/grapl-analyzer-executor-test:${TAG:-latest}
@@ -114,7 +123,7 @@ services:
 
   grapl-notebook-test:
     image: grapl/grapl-notebook-test:${TAG:-latest}
-    build: 
+    build:
       context: ${PWD}/src
       dockerfile: ./python/Dockerfile
       target: grapl-notebook-test
