WIP still broken

--- a/test/docker-compose.unit-tests-python.yml
+++ b/test/docker-compose.unit-tests-python.yml
@@ -43,7 +43,7 @@ services:
         py.test -n auto -m "not integration_test"
         '
 
-  grapl-analyzer-deployer-test:
+  analyzer-deployer-test:
     image: grapl/analyzer-deployer-test:${TAG:-latest}
     build:
       context: ${PWD}/src
