--- a/test/docker-compose.typecheck-tests.yml
+++ b/test/docker-compose.typecheck-tests.yml
@@ -77,18 +77,16 @@ services:
 
   typecheck-analyzer-deployer:
     image: grapl/analyzer-deployer-test:${TAG:-latest}
+    build:
+      context: ${PWD}/src
+      dockerfile: ./python/Dockerfile
+      target: analyzer-deployer-build
     command: /bin/sh -c '
       source venv/bin/activate &&
       cd analyzer_deployer &&
       pip install mypy &&
       mypy .
       '
-    environment:
-      - "IS_LOCAL=True"
-      - "ANALYZERS_TABLE=local-grapl-analyzers_table"
-      - GRPC_ENABLE_FORK_SUPPORT=1
-      - "BUCKET_PREFIX=local-grapl"
-      - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
 
   typecheck-model-plugin-deployer:
     image: grapl/grapl-model-plugin-deployer-test:${TAG:-latest}
