analyzer-deployer tests run now

--- a/test/docker-compose.e2e-tests.yml
+++ b/test/docker-compose.e2e-tests.yml
@@ -13,17 +13,17 @@ services:
     command: |
       bash -c "
         wait-for-it grapl-provision:8126 --timeout=60 &&
-        source venv/bin/activate && 
-        cd grapl_e2e_tests && 
+        source venv/bin/activate &&
+        cd grapl_e2e_tests &&
         python3 ./main.py"
-    volumes: 
+    volumes:
       - dynamodb_dump:/mnt/dynamodb_dump
       - ${PWD}/etc:/home/grapl/etc:ro
     environment:
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-INFO}
       - BUCKET_PREFIX=local-grapl
       - IS_LOCAL=True
-      - MG_ALPHAS=grapl-master-graph-db:9080
+      - MG_ALPHAS=graphdb:9080
       - DEBUG_SERVICES=${DEBUG_SERVICES}
       - DUMP_ARTIFACTS=${DUMP_ARTIFACTS:-False}
       - AWS_REGION=us-east-1
