--- a/test/docker-compose.integration-tests.yml
+++ b/test/docker-compose.integration-tests.yml
@@ -22,7 +22,7 @@ services:
       - RUST_BACKTRACE=1
       - BUCKET_PREFIX=local-grapl
       - IS_LOCAL=True
-      - MG_ALPHAS=grapl-master-graph-db:9080
+      - MG_ALPHAS=graphdb:9080
       - SOURCE_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-node-identifier-retry-queue
       - GRAPH_MERGER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-graph-merger-queue
       - STATIC_MAPPING_TABLE=local-grapl-static_mapping_table
@@ -53,7 +53,7 @@ services:
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-INFO}
       - BUCKET_PREFIX=local-grapl
       - IS_LOCAL=True
-      - MG_ALPHAS=grapl-master-graph-db:9080
+      - MG_ALPHAS=graphdb:9080
 
   analyzer-deployer-integration-tests:
     image: grapl/analyzer-deployer-test:${TAG:-latest}
@@ -61,10 +61,10 @@ services:
       context: ${PWD}/src
       dockerfile: ./python/Dockerfile
       target: analyzer-deployer-test
-    command: /bin/sh -c '
+    command: /bin/bash -c '
       wait-for-it grapl-provision:8126 --timeout=180 &&
       source venv/bin/activate &&
-      cd analyzer_deployer &&
+      cd analyzer-deployer &&
       py.test -n auto -m "integration_test"'
     environment:
       - "IS_LOCAL=True"
