--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ x-common-variables:
     IP_CONNECTION_HISTORY_TABLE: local-grapl-ip_connection_history_table
     ASSET_ID_MAPPINGS: local-grapl-asset_id_mappings
   mg-alphas: &mg-alphas
-    MG_ALPHAS: "master_graph:9080"
+    MG_ALPHAS: "grapl-master-graph-db.grapl.dev:9080"
   log-level: &log-level
     RUST_LOG: "${RUST_LOG:-ERROR}"
     GRAPL_LOG_LEVEL: "${GRAPL_LOG_LEVEL:-ERROR}"
@@ -63,6 +63,10 @@ services:
         source: dgraph_export
         # Hitting :8080/admin/export will force an export to be written to this directory.
         target: /dgraph/export
+    networks:
+      default:
+        aliases:
+          - grapl-master-graph-db.grapl.dev
 
   # dev uses 1 big redis instance, prod has 1:1 redis per grapl service
   dev-shared-redis:  # maybe transitory, this will eventually match prod
@@ -296,7 +300,6 @@ services:
     tty: false
     links:
       - sqs:sqs.us-east-1.amazonaws.com
-      - grapl-master-graph-db:master_graph
     extra_hosts:
       - sqs:127.0.0.1
     depends_on:
@@ -375,8 +378,6 @@ services:
       BUCKET_PREFIX: "local-grapl"
       SOURCE_QUEUE_URL: "http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-analyzer-executor-queue"
       RETRY_QUEUE_URL: "http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-analyzer-executor-retry-queue"
-    links:
-      - grapl-master-graph-db:master_graph
     tty: true
     ports:
       - 8401:8401  # VSC Debugger
@@ -422,8 +423,8 @@ services:
       <<: *mg-alphas
       <<: *aws-endpoints
     tty: true
-    links:
-      - grapl-master-graph-db:master_graph
+    depends_on:
+      - grapl-master-graph-db
 
   grapl-engagement-edge:
     image: grapl/grapl-engagement-edge:${TAG:-latest}
@@ -455,8 +456,6 @@ services:
     depends_on:
       - grapl-provision
     tty: true
-    links:
-      - grapl-master-graph-db:master_graph
 
   grapl-model-plugin-deployer:
     image: grapl/grapl-model-plugin-deployer:${TAG:-latest}
@@ -474,8 +473,6 @@ services:
       UX_BUCKET_URL: "localhost"
       <<: *aws-endpoints
     tty: true
-    links:
-      - grapl-master-graph-db:master_graph
 
   grapl-dgraph-ttl:
     image: grapl/grapl-dgraph-ttl:${TAG:-latest}
@@ -493,8 +490,6 @@ services:
       GRAPL_DGRAPH_TTL_S: "${GRAPL_DGRAPH_TTL_S:-31536000}"
       GRAPL_TTL_DELETE_BATCH_SIZE: "${GRAPL_TTL_DELETE_BATCH_SIZE:-10}"
     tty: true
-    links:
-      - grapl-master-graph-db:master_graph
 
   #
   # JS/web services
@@ -541,8 +536,6 @@ services:
       IS_LOCAL: "True"
       PORT: "5000"
       JWT_SECRET_ID: "JWT_SECRET_ID"
-    links:
-      - grapl-master-graph-db:master_graph
     ports:
       - 5000:5000
 
@@ -560,8 +553,6 @@ services:
     user: grapl
     environment:
       <<: *mg-alphas
-    links:
-      - grapl-master-graph-db:master_graph
     ports:
       - 8888:8888
 
@@ -597,8 +588,6 @@ services:
     tty: true
     ports:
       - 8126:8126
-    links:
-      - grapl-master-graph-db:master_graph
     depends_on:
       - dynamodb
       - grapl-master-graph-db
